--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "base-64": "^1.0.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "js-cookie": "^3.0.1",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
