--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^1.0.6",
+    "axios": "^1.1.3",
     "base-64": "^1.0.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.7.2",
     "next": "13.0.3",
+    "next-auth": "^4.16.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.4",
+    "react-toastify": "^9.1.1",
+    "swiper": "^8.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.25",
