--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^1.0.6",
+    "@paypal/react-paypal-js": "^7.8.1",
     "axios": "^1.1.3",
     "base-64": "^1.0.0",
     "bcryptjs": "^2.4.3",
