--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# mine
+notes.md
+report.md
+
+# other
+/.vscode
+.prettierignore
+.prettierrc
